# openalex

./: .gitignore  LICENSE  README.md  environment.yml  main.py  minimal_environment.yml  pyproject.toml  refactor_SciSciNetv2.py  refactored_main.py  slim-env.yml
_old/: custom_graph.py  graph_creator.py  main.py
data/: works_authors_small.parquet
notebooks/: Untitled.ipynb  author_iou.ipynb  getting-started.ipynb
openalex/: main.py
openalex/src/: entities.py  utils.py
preprocessing/: filter_dataset.py  flatten_openalex_files.py
src/: create_graph.py  custom_graph.py  encoder.py  entities.py  globals.py  graph_creator.py  index.py  objects.py  utils.py
